Reinstated concat relations. This is the last old feature to be reinstated, so it now has all the 0.5 functions back plus a couple of new ones.
Known bug exists in compound relations - will fix next week.

Still to go...: partitioned source schemas, recursion, GUI tweaks.